pagina 404 a las redes

--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
 
     <!-- Link a mi css -->
     <link rel="stylesheet" href="css/estilos.css">
-    
+
     <title>Guía de League of Legends</title>
 </head>
 
@@ -90,7 +90,7 @@
         <!-- inicio del banner -->
         <div class="banner">
         </div>
-        <div class="cont-titulo-banner animate__animated animate__zoomInDown">
+        <div class="cont-titulo-banner animate__animated animate__backInDown">
             <h1 class="cont-titulo-banner__titulo">
                 Bienvenido a <br> LolGuides
             </h1>
@@ -138,19 +138,19 @@
             <h2 class="cont-redes__titulo">información de Contacto:</h2>
             <ul class="cont-redes__lista">
                 <li>
-                    <i class="fab fa-instagram icono-footer"></i> <a href="https://www.instagram.com/">Instagram</a>
+                    <i class="fab fa-instagram icono-footer"></i> <a href="https://www.instagram.com/matiassorgetti/">Instagram</a>
                 </li>
 
                 <li>
-                    <i class="fab fa-facebook-square icono-footer"></i> <a href="https://www.facebook.com/">facebook</a>
+                    <i class="fab fa-facebook-square icono-footer"></i> <a href="error404.html">facebook</a>
                 </li>
 
                 <li>
-                    <i class="fab fa-twitch icono-footer"></i> <a href="https://www.twitch.tv/">Twitch</a>
+                    <i class="fab fa-twitch icono-footer"></i> <a href="error404.html">Twitch</a>
                 </li>
 
                 <li>
-                    <i class="fab fa-youtube-square icono-footer"></i> <a href="https://www.youtube.com/">Youtube</a>
+                    <i class="fab fa-youtube-square icono-footer"></i> <a href="error404.html">Youtube</a>
                 </li>
             </ul>
         </div>
