--- a/adc.html
+++ b/adc.html
@@ -290,36 +290,37 @@
         </section>
     </main>
 
-    <!-- pie de página -->
-    <footer class="footer">
-        <!-- redes sociales -->
-        <div class="cont-redes">
-            <h2 class="cont-redes__titulo">información de Contacto:</h2>
-            <ul class="cont-redes__lista">
-                <li>
-                    <i class="fab fa-instagram icono-footer"></i> <a href="https://www.instagram.com/">Instagram</a>
-                </li>
+<!-- pie de página -->
+<footer class="footer">
+    <!-- redes sociales -->
+    <div class="cont-redes">
+        <h2 class="cont-redes__titulo">información de Contacto:</h2>
+        <ul class="cont-redes__lista">
+            <li>
+                <i class="fab fa-instagram icono-footer"></i> <a
+                    href="https://www.instagram.com/matiassorgetti/">Instagram</a>
+            </li>
 
-                <li>
-                    <i class="fab fa-facebook-square icono-footer"></i> <a href="https://www.facebook.com/">facebook</a>
-                </li>
+            <li>
+                <i class="fab fa-facebook-square icono-footer"></i> <a href="error404.html">facebook</a>
+            </li>
 
-                <li>
-                    <i class="fab fa-twitch icono-footer"></i> <a href="https://www.twitch.tv/">Twitch</a>
-                </li>
+            <li>
+                <i class="fab fa-twitch icono-footer"></i> <a href="error404.html">Twitch</a>
+            </li>
 
-                <li>
-                    <i class="fab fa-youtube-square icono-footer"></i> <a href="https://www.youtube.com/">Youtube</a>
-                </li>
-            </ul>
-        </div>
-        <!-- derechos de autor -->
-        <div class="cont-derechos">
-            <p class="cont-derechos__texto">
-                Todos los derechos reservados: Matías Francisco sorgetti
-            </p>
-        </div>
-    </footer>
+            <li>
+                <i class="fab fa-youtube-square icono-footer"></i> <a href="error404.html">Youtube</a>
+            </li>
+        </ul>
+    </div>
+    <!-- derechos de autor -->
+    <div class="cont-derechos">
+        <p class="cont-derechos__texto">
+            Todos los derechos reservados: Matías Francisco sorgetti
+        </p>
+    </div>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
