--- a/error404.html
+++ b/error404.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,6 +16,7 @@
     <link rel="stylesheet" href="css/estilos.css">
     <title>Error 404</title>
 </head>
+
 <body>
     <div class="cont-error">
         <img src="./imgs/img-error404.png" alt="" class="teemo">
@@ -22,11 +24,12 @@
             Error 404
         </h1>
         <p>
-           Upss...Teemo plantó un hongo,
-           <br>
-            y arruinó la página.
+            Ups...Teemo plantó un hongo
+            <br>
+            y arruinó la página. <br>
+            Está sección no se encuentra habilitada.    
         </p>
-        <a href="index.html" class="btn-error">El tamaño no lo es todo</a>
+        <a href="index.html" class="btn-error">El tamaño no lo es todo</a>    
     </div>
 </body>
 </html>
