cambie el footer y el logo

--- a/Index.html
+++ b/Index.html
@@ -103,7 +103,7 @@
             <div class="section__cont-textos wow animate__animated animate__fadeInLeftBig">
                 <h2>¿Qué es League of Legends?</h2>
                 <div>
-                    <img src="./imgs/imgenes-index/img-lol 1.png" alt="foto de campeones del lol">
+                    <img src="./imgs/imgenes-index/img-lol.png" alt="foto de campeones del lol">
                 </div>
                 <p>
                     League of legends es un MOBA de alta competitividad y uno de los deportes electrónicos más populares
@@ -117,7 +117,7 @@
             <div class="section__cont-textos wow animate__animated animate__fadeInRightBig">
                 <h2>¿En qué consiste mi guía?</h2>
                 <div>
-                    <img src="./imgs/imgenes-index/foto-victoria 1.png " alt="foto de cartel de victoria del lol">
+                    <img src="./imgs/imgenes-index/foto-victoria.png" alt="foto de cartel de victoria del lol">
                 </div>
                 <p>
                     En esta página web me voy a tomar el tiempo de enseñar y ayudar a mejorar
@@ -133,10 +133,16 @@
 
     <!-- pie de página -->
     <footer class="footer">
+        <div class="cont-logo-footer">
+            <img src="./imgs/logo.png" alt="lolguides logo">
+        </div>
         <!-- redes sociales -->
         <div class="cont-redes">
-            <h2 class="cont-redes__titulo">información de Contacto:</h2>
             <ul class="cont-redes__lista">
+                <li>
+                    <h2>redes personales</h2>
+                </li>
+
                 <li>
                     <i class="fab fa-instagram icono-footer"></i> <a href="https://www.instagram.com/matiassorgetti/">Instagram</a>
                 </li>
@@ -144,11 +150,17 @@
                 <li>
                     <i class="fab fa-facebook-square icono-footer"></i> <a href="error404.html">facebook</a>
                 </li>
+            </ul>
+
+            <ul class="cont-redes__lista">
+                <li>
+                    <h2>contenido didáctico</h2>
+                </li>
 
                 <li>
                     <i class="fab fa-twitch icono-footer"></i> <a href="error404.html">Twitch</a>
                 </li>
-
+                                
                 <li>
                     <i class="fab fa-youtube-square icono-footer"></i> <a href="error404.html">Youtube</a>
                 </li>
