cambie nombre a imagenes

--- a/fundamentos.html
+++ b/fundamentos.html
@@ -676,7 +676,7 @@
 
                     <div class="wow animate__animated animate__fadeInRightBig">
                         <h4>Melee</h4>
-                        <img src="./imgs/imagenes-fundamentos/minions/minions-melee 1.png" alt="súbdito guerrero">
+                        <img src="./imgs/imagenes-fundamentos/minions/minions-melee.png" alt="súbdito guerrero">
                         <p>
                             Estos son subditos guerreros que pegan cuerpo a cuerpo y son los primeros de la oleada en
                             avanzar. Tienen mucha vida, pero pegan menos; a su vez dan más oro que los magos
@@ -685,7 +685,7 @@
 
                     <div class="wow animate__animated animate__fadeInLeftBig">
                         <h4>Magos</h4>
-                        <img src="./imgs/imagenes-fundamentos/minions/minions-magos-1.png" alt="súbdito mago">
+                        <img src="./imgs/imagenes-fundamentos/minions/minions-magos.png" alt="súbdito mago">
                         <p>
                             Esta clase de subditos atacan a larga distancia y siempre van atras en la oleada. Si atacan
                             juntos pueden llegar a hacer mucho daño. Además son los subditos que menos oro y experiencia
@@ -695,7 +695,7 @@
 
                     <div class="wow animate__animated animate__fadeInRightBig">
                         <h4>Cannon</h4>
-                        <img src="./imgs/imagenes-fundamentos/minions/minions-cannon 1.png" alt="súbdito cannon">
+                        <img src="./imgs/imagenes-fundamentos/minions/minions-cannon.png" alt="súbdito cannon">
                         <p>
                             Estos aparecen cada 3 oleadas en cada linea y atacan a media distancia. Además hacen más
                             daño y
@@ -723,7 +723,7 @@
                 <div id="torres" class="wow animate__animated animate__fadeInLeftBig">
                     <h3>Torretas</h3>
                     <img
-                        src="./imgs/imagenes-fundamentos/estructuras/Torres 1.png"
+                        src="./imgs/imagenes-fundamentos/estructuras/Torres.png"
                         alt="dos torres metálicas, una roja y otra azul">
                     <p>
                         Las torretas son estructuras que defienden el avance de los enemigos,
@@ -742,7 +742,7 @@
                 <div id="inhi" class="wow animate__animated animate__fadeInRightBig">
                     <h3>Inhibidores</h3>
                     <img
-                        src="./imgs/imagenes-fundamentos/estructuras/inhibidor 1.png"
+                        src="./imgs/imagenes-fundamentos/estructuras/inhibidor.png"
                         alt="dos estructuras redondas, una roja y otra azul">
                     <p>
                         Los inhibidores son estructuras que se encuentran atras de la ultima torre de cada carril.
@@ -762,7 +762,7 @@
                 <div id="nexo" class="wow animate__animated animate__fadeInLeftBig">
                     <h3>Nexo</h3>
                     <img
-                        src="./imgs/imagenes-fundamentos/estructuras/Nexo 1.png" alt="Estructura redonda gigante">
+                        src="./imgs/imagenes-fundamentos/estructuras/Nexo.png" alt="Estructura redonda gigante">
                     <p>
                         El Nexo es el objetivo más importante dentro de cada partida. Para que un equipo gane,
                         uno de los dos nexos tiene que ser destruido. Se encuentra dentro de la base y todo aquello
@@ -775,7 +775,7 @@
                 <div id="fuente" class="wow animate__animated animate__fadeInRightBig">
                     <h3>Fuente</h3>
                     <img
-                        src="./imgs/imagenes-fundamentos/estructuras/fuente 1.png" alt="contiene la fuente">
+                        src="./imgs/imagenes-fundamentos/estructuras/fuente.png" alt="contiene la fuente">
                     <p>
                         La fuente es una estructura que se encuentra en lo mas profundo de la base de cada equipo
                         y esta sirve para que los jugadores recuperen su vida y su mana y es donde aparece cada
