--- a/adc.html
+++ b/adc.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -117,7 +117,7 @@
                 </div>
 
                 <div class="dropdown">
-                    <button class="btn dropdown-toggle boton-dropdown" type="button" id="dropdownMenuButton2"
+                    <button class="btn dropdown-toggle boton-dropdown" type="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Tipos de adc
                     </button>
@@ -130,7 +130,7 @@
                 </div>
 
                 <div class="dropdown">
-                    <button class="btn dropdown-toggle boton-dropdown" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown"
+                    <button class="btn dropdown-toggle boton-dropdown" type="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         Micro game
                     </button>
@@ -141,7 +141,7 @@
                 </div>
 
                 <div class="dropdown">
-                    <button class="btn dropdown-toggle boton-dropdown" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown"
+                    <button class="btn dropdown-toggle boton-dropdown" type="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         Macro game
                     </button>
