--- a/Index.html
+++ b/Index.html
@@ -144,7 +144,8 @@
                 </li>
 
                 <li>
-                    <i class="fab fa-instagram icono-footer"></i> <a href="https://www.instagram.com/matiassorgetti/">Instagram</a>
+                    <i class="fab fa-instagram icono-footer"></i> <a
+                        href="https://www.instagram.com/matiassorgetti/">Instagram</a>
                 </li>
 
                 <li>
@@ -160,7 +161,7 @@
                 <li>
                     <i class="fab fa-twitch icono-footer"></i> <a href="error404.html">Twitch</a>
                 </li>
-                                
+
                 <li>
                     <i class="fab fa-youtube-square icono-footer"></i> <a href="error404.html">Youtube</a>
                 </li>
