--- a/adc.html
+++ b/adc.html
@@ -117,8 +117,8 @@
                 </div>
 
                 <div class="dropdown">
-                    <button class="btn dropdown-toggle boton-dropdown" type="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
+                    <button class="btn dropdown-toggle boton-dropdown" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
                         Tipos de adc
                     </button>
                     <ul class="dropdown-menu dropdown-menu-dark lista-dropdown" aria-labelledby="dropdownMenuButton2">
@@ -162,7 +162,8 @@
 
                     <h3 id="kiteo-definicion">¿Qué es el kiteo?</h3>
                     <p>
-                        El kiteo es aprovechar el tiempo de recarga del auto ataque de tu campeon para moverte, ya que en
+                        El kiteo es aprovechar el tiempo de recarga del auto ataque de tu campeon para moverte, ya que
+                        en
                         ese lapso no puedes hacer daño.
                     </p>
                 </div>
@@ -170,7 +171,8 @@
                 <div class="wow animate__animated animate__fadeInRightBig">
                     <h3 id="kiteo-utilidad">¿Para qué sirve?</h3>
                     <p>
-                        Sirve para que sea más dificil que el enemigo logre alcanzarte, ya sea con ataques básicos (si es
+                        Sirve para que sea más dificil que el enemigo logre alcanzarte, ya sea con ataques básicos (si
+                        es
                         melee) o con habilidades.
                         Saber kitear o no puede ser la diferencia entre ser un buen adc o uno pésimo, ya que si no sabes
                         kitear es muy dificil que puedas
@@ -181,7 +183,8 @@
                 <div class="wow animate__animated animate__fadeInLeftBig">
                     <h3 id="kiteo-config">Configuración de kiteo</h3>
                     <p>
-                        En el siguiente video voy a mostrar como configurar las teclas para poder kitear de la manera más
+                        En el siguiente video voy a mostrar como configurar las teclas para poder kitear de la manera
+                        más
                         óptima.
                     </p>
                 </div>
@@ -198,11 +201,11 @@
             <div class="section-guiaAdc__cont-texto">
                 <div class="wow animate__animated animate__fadeInLeftBig">
                     <h2>Tipos de adc</h2>
-                    <img
-                        src="./imgs/imagenes-AdcGuide/tipos-de-Adc.png"
+                    <img src="./imgs/imagenes-AdcGuide/tipos-de-Adc.png"
                         alt="background de dos campeones y encima un texto que dice diferentes tipos de adc">
                     <p>
-                        Para poder jugar correctamente adc, primero hay que saber cual va a ser tu rol dentro de la partida,
+                        Para poder jugar correctamente adc, primero hay que saber cual va a ser tu rol dentro de la
+                        partida,
                         y eso depende mucho de que clase de tirador estes jugando.
                     </p>
                 </div>
@@ -210,10 +213,13 @@
                 <div class="wow animate__animated animate__fadeInRightBig">
                     <h3 id="adc-utilidad">Utilidad</h3>
                     <p>
-                        La función de este tipo de adc es ser útiles para el equipo, como indica su nombre, ya que tienen
+                        La función de este tipo de adc es ser útiles para el equipo, como indica su nombre, ya que
+                        tienen
                         habilidades que les permiten iniciar una pelea facilmente,
-                        hacer disengage de una pelea o simplemente pueden buffear al team con curaciones y escudos. Suelen
-                        pickearse cuando el equipo tiene daño suficiente para las peleas en equipo, pero no tiene utilidad.
+                        hacer disengage de una pelea o simplemente pueden buffear al team con curaciones y escudos.
+                        Suelen
+                        pickearse cuando el equipo tiene daño suficiente para las peleas en equipo, pero no tiene
+                        utilidad.
                         Los siguientes campeones son adc de utilidad:
                     </p>
                 </div>
@@ -221,18 +227,21 @@
                 <div class="wow animate__animated animate__fadeInLeftBig">
                     <h3 id="adc-hipercarry">Hipercarrys</h3>
                     <p>
-                        Este tipo de adc suele brillar en el juego tardio y si se feedean pueden carrear la partida solos,
+                        Este tipo de adc suele brillar en el juego tardio y si se feedean pueden carrear la partida
+                        solos,
                         pero en el juego temprano suelen sufrir mucho, por lo que necesitan de soportes que puedan
                         hacerle peel, para que puedan escalar. Los siguientes campeones son adc hipercarrys:
                     </p>
                 </div>
 
                 <div class="wow animate__animated animate__fadeInRightBig">
-                <h3 id="adc-caster">adc casters</h3>
+                    <h3 id="adc-caster">adc casters</h3>
                     <p>
-                        Este tipo de adc dependen principalmente de sus habilidades para meter la mayor cantidad de daño,
+                        Este tipo de adc dependen principalmente de sus habilidades para meter la mayor cantidad de
+                        daño,
                         por lo general son skill shots.
-                        Esto no quiere decir que no tengan que usar sus ataques básicos, todo lo contrario. Los siguientes
+                        Esto no quiere decir que no tengan que usar sus ataques básicos, todo lo contrario. Los
+                        siguientes
                         campeones son adc casters:
                     </p>
                 </div>
@@ -240,7 +249,8 @@
                 <div class="wow animate__animated animate__fadeInLeftBig">
                     <h3 id="adc-asedio">adc de asedio</h3>
                     <p>
-                        Este tipo de adc son campeones que tienen muchisima limpieza de oleadas y usan sus ataques basicos
+                        Este tipo de adc son campeones que tienen muchisima limpieza de oleadas y usan sus ataques
+                        basicos
                         y/o habilidades para desgastar al enemigo, para que este no pueda pelear.
                         Los siguientes campeones son adc de asedio:
                     </p>
@@ -290,49 +300,49 @@
         </section>
     </main>
 
-<!-- pie de página -->
-<footer class="footer">
-    <div class="cont-logo-footer">
-        <img src="./imgs/logo.png" alt="lolguides logo">
-    </div>
-    <!-- redes sociales -->
-    <div class="cont-redes">
-        <ul class="cont-redes__lista">
-            <li>
-                <h2>redes personales</h2>
-            </li>
+    <!-- pie de página -->
+    <footer class="footer">
+        <div class="cont-logo-footer">
+            <img src="./imgs/logo.png" alt="lolguides logo">
+        </div>
+        <!-- redes sociales -->
+        <div class="cont-redes">
+            <ul class="cont-redes__lista">
+                <li>
+                    <h2>redes personales</h2>
+                </li>
 
-            <li>
-                <i class="fab fa-instagram icono-footer"></i> <a
-                    href="https://www.instagram.com/matiassorgetti/">Instagram</a>
-            </li>
+                <li>
+                    <i class="fab fa-instagram icono-footer"></i> <a
+                        href="https://www.instagram.com/matiassorgetti/">Instagram</a>
+                </li>
 
-            <li>
-                <i class="fab fa-facebook-square icono-footer"></i> <a href="error404.html">facebook</a>
-            </li>
-        </ul>
+                <li>
+                    <i class="fab fa-facebook-square icono-footer"></i> <a href="error404.html">facebook</a>
+                </li>
+            </ul>
 
-        <ul class="cont-redes__lista">
-            <li>
-                <h2>contenido didáctico</h2>
-            </li>
+            <ul class="cont-redes__lista">
+                <li>
+                    <h2>contenido didáctico</h2>
+                </li>
 
-            <li>
-                <i class="fab fa-twitch icono-footer"></i> <a href="error404.html">Twitch</a>
-            </li>
+                <li>
+                    <i class="fab fa-twitch icono-footer"></i> <a href="error404.html">Twitch</a>
+                </li>
 
-            <li>
-                <i class="fab fa-youtube-square icono-footer"></i> <a href="error404.html">Youtube</a>
-            </li>
-        </ul>
-    </div>
-    <!-- derechos de autor -->
-    <div class="cont-derechos">
-        <p class="cont-derechos__texto">
-            Todos los derechos reservados: Matías Francisco sorgetti
-        </p>
-    </div>
-</footer>
+                <li>
+                    <i class="fab fa-youtube-square icono-footer"></i> <a href="error404.html">Youtube</a>
+                </li>
+            </ul>
+        </div>
+        <!-- derechos de autor -->
+        <div class="cont-derechos">
+            <p class="cont-derechos__texto">
+                Todos los derechos reservados: Matías Francisco sorgetti
+            </p>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
